Add update of morphometrics dvc repro

--- a/dvc/training/checkpoints-morphometrics/.gitignore
+++ b/dvc/training/checkpoints-morphometrics/.gitignore
@@ -11,3 +11,23 @@
 /pc-L6-all-morphometrics-xgb-stratified-k-fold
 /in-merged-all-morphometrics-xgb-stratified-k-fold
 /in-merged-bc-merged-all-morphometrics-xgb-stratified-k-fold
+/in-L1-petilla-morphometrics-xgb-stratified-k-fold
+/in-L23-petilla-morphometrics-xgb-stratified-k-fold
+/in-L1-allen-morphometrics-xgb-stratified-k-fold
+/in-L23-allen-morphometrics-xgb-stratified-k-fold
+/in-L4-allen-morphometrics-xgb-stratified-k-fold
+/in-L5-allen-morphometrics-xgb-stratified-k-fold
+/in-L6-allen-morphometrics-xgb-stratified-k-fold
+/janelia-L5-allen-morphometrics-xgb-stratified-k-fold
+/pc-L2-allen-morphometrics-xgb-stratified-k-fold
+/pc-L3-allen-morphometrics-xgb-stratified-k-fold
+/pc-L4-allen-morphometrics-xgb-stratified-k-fold
+/pc-L5-allen-morphometrics-xgb-stratified-k-fold
+/pc-L6-allen-morphometrics-xgb-stratified-k-fold
+/in-merged-allen-morphometrics-xgb-stratified-k-fold
+/in-merged-bc-merged-allen-morphometrics-xgb-stratified-k-fold
+/in-L1-lauturns-morphometrics-xgb-stratified-k-fold
+/in-L23-lauturns-morphometrics-xgb-stratified-k-fold
+/in-L4-lauturns-morphometrics-xgb-stratified-k-fold
+/in-L5-lauturns-morphometrics-xgb-stratified-k-fold
+/in-L6-lauturns-morphometrics-xgb-stratified-k-fold
