Add new updates from morphometrics experiment

--- a/dvc/training/checkpoints-morphometrics/.gitignore
+++ b/dvc/training/checkpoints-morphometrics/.gitignore
@@ -31,3 +31,20 @@
 /in-L4-lauturns-morphometrics-xgb-stratified-k-fold
 /in-L5-lauturns-morphometrics-xgb-stratified-k-fold
 /in-L6-lauturns-morphometrics-xgb-stratified-k-fold
+/janelia-L5-lauturns-morphometrics-xgb-stratified-k-fold
+/pc-L2-lauturns-morphometrics-xgb-stratified-k-fold
+/pc-L3-lauturns-morphometrics-xgb-stratified-k-fold
+/pc-L4-lauturns-morphometrics-xgb-stratified-k-fold
+/pc-L5-lauturns-morphometrics-xgb-stratified-k-fold
+/pc-L6-lauturns-morphometrics-xgb-stratified-k-fold
+/in-merged-lauturns-morphometrics-xgb-stratified-k-fold
+/in-merged-bc-merged-lauturns-morphometrics-xgb-stratified-k-fold
+/in-L4-petilla-morphometrics-xgb-stratified-k-fold
+/in-L5-petilla-morphometrics-xgb-stratified-k-fold
+/in-L6-petilla-morphometrics-xgb-stratified-k-fold
+/pc-L2-petilla-morphometrics-xgb-stratified-k-fold
+/pc-L4-petilla-morphometrics-xgb-stratified-k-fold
+/pc-L6-petilla-morphometrics-xgb-stratified-k-fold
+/in-merged-petilla-morphometrics-xgb-stratified-k-fold
+/in-merged-bc-merged-petilla-morphometrics-xgb-stratified-k-fold
+/janelia-L5-petilla-morphometrics-xgb-stratified-k-fold
