--- a/dvc/params.yaml
+++ b/dvc/params.yaml
@@ -1841,6 +1841,58 @@ features-morphometrics:
     morphometrics-config: morphometrics_config_petilla.yaml
     dataset-csv: IN_data_BC_merged.csv
     output-features-directory: in-merged-bc-merged/petilla
+  in-L1-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: interneurons/L1/dataset.csv
+    output-features-directory: in-L1/petilla1
+  in-L23-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: interneurons/L23/dataset.csv
+    output-features-directory: in-L23/petilla1
+  in-L4-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: interneurons/L4/dataset.csv
+    output-features-directory: in-L4/petilla1
+  in-L5-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: interneurons/L5/dataset.csv
+    output-features-directory: in-L5/petilla1
+  in-L6-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: interneurons/L6/dataset.csv
+    output-features-directory: in-L6/petilla1
+  pc-L2-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: pyramidal-cells/L2/dataset.csv
+    output-features-directory: pc-L2/petilla1
+  pc-L3-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: pyramidal-cells/L3/dataset.csv
+    output-features-directory: pc-L3/petilla1
+  pc-L4-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: pyramidal-cells/L4/dataset.csv
+    output-features-directory: pc-L4/petilla1
+  pc-L5-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: pyramidal-cells/L5/dataset.csv
+    output-features-directory: pc-L5/petilla1
+  pc-L6-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: pyramidal-cells/L6/dataset.csv
+    output-features-directory: pc-L6/petilla1
+  janelia-L5-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: janelia/L5/dataset.csv
+    output-features-directory: janelia-L5/petilla1
+  in-merged-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: IN_data.csv
+    output-features-directory: in-merged/petilla1
+  in-merged-bc-merged-petilla1:
+    morphometrics-config: morphometrics_config_petilla_without_parameter.yaml
+    dataset-csv: IN_data_BC_merged.csv
+    output-features-directory: in-merged-bc-merged/petilla1
 
 training-morphometrics:
   in-L1-all-morphometrics-xgb-stratified-k-fold:
@@ -2051,6 +2103,58 @@ training-morphometrics:
     morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/lauturns/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L1-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L1/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L23-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L23/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L4-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L4/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L5-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L5/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L6-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L6/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  janelia-L5-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/janelia-L5/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L2-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L2/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L3-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L3/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L4-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L4/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L5-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L5/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L6-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L6/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-merged-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-merged-bc-merged-petilla1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/petilla1/features.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
 
 evaluate-morphometrics:
   - in-L1-all-morphometrics-xgb-stratified-k-fold
@@ -2105,3 +2209,16 @@ evaluate-morphometrics:
   - in-merged-petilla-morphometrics-xgb-stratified-k-fold
   - in-merged-bc-merged-petilla-morphometrics-xgb-stratified-k-fold
   - janelia-L5-petilla-morphometrics-xgb-stratified-k-fold
+  - in-L1-petilla1-morphometrics-xgb-stratified-k-fold
+  - in-L23-petilla1-morphometrics-xgb-stratified-k-fold
+  - in-L4-petilla1-morphometrics-xgb-stratified-k-fold
+  - in-L5-petilla1-morphometrics-xgb-stratified-k-fold
+  - in-L6-petilla1-morphometrics-xgb-stratified-k-fold
+  - pc-L2-petilla1-morphometrics-xgb-stratified-k-fold
+  - pc-L3-petilla1-morphometrics-xgb-stratified-k-fold
+  - pc-L4-petilla1-morphometrics-xgb-stratified-k-fold
+  - pc-L5-petilla1-morphometrics-xgb-stratified-k-fold
+  - pc-L6-petilla1-morphometrics-xgb-stratified-k-fold
+  - in-merged-petilla1-morphometrics-xgb-stratified-k-fold
+  - in-merged-bc-merged-petilla1-morphometrics-xgb-stratified-k-fold
+  - janelia-L5-petilla1-morphometrics-xgb-stratified-k-fold
