--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,8 @@ install_requires =
     imbalanced-learn
     jinja2
     matplotlib
-    morphio
-    morphology-workflows>=0.3.0
+    #morphio
+    #morphology-workflows>=0.3.0
     networkx
     neurom>=3
     NeuroR>=1.6.1
