--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ python_requires = >=3.8,<3.9
 install_requires =
     PyYAML
     captum
+    cleanlab==1.0.1
     click
     dash
     dash-bootstrap-components
